# neural_representation_of_differentiable_trees

./: .gitignore  .gitmodules  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  forest_timing.py  forest_tuning.py  pruning_accuracy.py  pruning_timing.py  pruning_timing_ref.py  requirements.txt  setup.cfg  setup.py  timing.py  tuning.py
.github/ISSUE_TEMPLATE/: template-for-mbition-employees.md
DDT/: requirements.txt
src/: config.py  metrics.py  model_timer.py  param_tuner.py  processing.py
src/abstract/: abstract_data_loader.py  abstract_evaluator.py  abstract_model.py  sklearn_model.py  tf_model.py  torch_model.py
src/data/: abalone_data.py  appliances_data.py  energy_efficiency_data.py  mpg_data.py  online_news_data.py
src/export/: documentation.py  logger.py  sqlite.py
src/models/: ddt.py  gbdt.py  grande.py  nerdt.py  node.py  sdtr.py  tel.py  tree.py
src/models/nerdt_lib/: converter.py  layer_info.py  layers.py  pruner.py  tree_representation.py
src/utils/: data_types.py  scaling.py  torch_data.py  utils.py
src/validation/: cv_evaluator.py  pruning_evaluator.py
test/abstract/: tf_model_test.py  torch_model_test.py
test/utils/: utils_test.py
