# SPDX-FileCopyrightText: Copyright (c) 2024 MBition GmbH.
# SPDX-License-Identifier: MIT
[metadata]
name = nerdt
author = Tobias Ritter
description = Code for the corresponding paper - NeRDT: Neural Representation of Differentiable Trees for Efficient and Interpretable Inference
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
include_package_data = True

[importlinter]
root_packages = 
    src
    test

[importlinter:contract:layers-contract]
name = layers contract
type = layers
layers=
    test
    src
